# kccautomation

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/cad-viewer/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/cad-viewer/src/: App.vue  main.ts
apps/cad-viewer/src/bridge/: client.ts
apps/cad-viewer/src/overlay/: KccOverlay.vue
apps/cad-viewer/src/theme/: tokens.css  (+1 more)
crates/erp-assemblies/: Cargo.toml
crates/erp-assemblies/src/: models.rs  service.rs
crates/erp-boq/: Cargo.toml
crates/erp-boq/src/: models.rs  service.rs
crates/erp-core/: Cargo.toml
crates/erp-core/src/: boq_rules.rs  cpm.rs  events.rs  evm.rs  formula.rs  lib.rs  markup.rs  regional.rs  validation.rs
crates/erp-costs/: Cargo.toml
crates/erp-costs/src/: models.rs  service.rs
crates/kcc-api/: Cargo.toml
crates/kcc-api/src/: error.rs  main.rs  state.rs
crates/kcc-api/src/middleware/: auth.rs
crates/kcc-api/src/routes/: analyze.rs  assemblies.rs  auth.rs  boq.rs  cde.rs  config.rs  corrections.rs  costmodel.rs  costs.rs  drawings.rs  features.rs  jobs.rs  kss.rs  mod.rs  price_corpus.rs  prices.rs  projects.rs  quantities.rs  render.rs  reports.rs  schedule.rs  takeoff.rs  tendering.rs  validation.rs  viewer.rs
crates/kcc-core/: Cargo.toml
crates/kcc-core/src/: drawing_type.rs  lib.rs
crates/kcc-core/src/ai/: merger.rs  mod.rs  prompt.rs  researcher.rs  response.rs
crates/kcc-core/src/datum/: extractor.rs  graph.rs  mod.rs  types.rs
crates/kcc-core/src/dimension/: parser.rs  resolver.rs  types.rs
crates/kcc-core/src/drm/: matcher.rs  mod.rs  recorder.rs  retrieval.rs
crates/kcc-core/src/fabrication/: bill_graph.rs  mod.rs  profile_db.rs  quantity_builder.rs
crates/kcc-core/src/feature/: centerline_detector.rs  contour_builder.rs  edge_detector.rs  hole_detector.rs  mod.rs  pattern_detector.rs  slot_detector.rs  steel_detector.rs  thread_detector.rs  types.rs
crates/kcc-core/src/gdt/: linker.rs  parser.rs  symbols.rs
crates/kcc-core/src/geometry/: mod.rs  model.rs  spatial.rs  structure.rs  utils.rs
crates/kcc-core/src/kcc/: config.rs  mod.rs  rules.rs  scorer.rs  types.rs
crates/kcc-core/src/kss/: audit.rs  layer_mapper.rs  mod.rs  obrazec91_catalog.rs  opening_subtractor.rs  quantity_calc.rs  quantity_extractor.rs  sections.rs  sek_mapper.rs  steel_profile_extractor.rs  types.rs  validators.rs
crates/kcc-core/src/price_corpus/: mod.rs  parser.rs  search.rs
crates/kcc-core/src/quantity_scraper/: mod.rs
crates/kcc-core/src/quantity_scraper/parsers/: baumit.rs  ceresit.rs  fibran.rs  generic_tds.rs  globus.rs  knauf.rs  mapei.rs  mod.rs  procurement_xls.rs  sika.rs  weber.rs  wienerberger.rs  ytong.rs
crates/kcc-core/src/scraper/: brightdata.rs  mod.rs  normalizer.rs  price_utils.rs  sek_mapper.rs
crates/kcc-core/src/scraper/parsers/: daibau.rs  mod.rs  mr_bricolage.rs
crates/kcc-core/src/tolerance_chain/: analyzer.rs  graph.rs  mod.rs  types.rs
crates/kcc-dxf/: Cargo.toml
crates/kcc-dxf/src/: deep_analyze.rs  dwg_converter.rs  lib.rs  normalizer.rs  parser.rs  renderer.rs
crates/kcc-dxf/tests/: multi_module.rs
crates/kcc-report/: Cargo.toml
crates/kcc-report/src/: csv.rs  json.rs  kss_excel.rs  kss_pdf.rs  lib.rs  pdf.rs
crates/kcc-worker/: Cargo.toml
crates/kcc-worker/src/: ai_kss_pipeline.rs  ai_summary_pipeline.rs  analyze_pipeline.rs  kss_pipeline.rs  main.rs  pdf_pipeline.rs  pipeline.rs  pricing_defaults.rs  quantity_scrape_pipeline.rs  scrape_pipeline.rs
crates/kcc-worker/src/jobs/: mod.rs
docker/: Dockerfile.api  Dockerfile.cad-viewer  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  nginx.cad-viewer.conf
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: client-shell.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/lib/: api.ts  configStore.ts  currency.ts  store.ts  themeStore.ts  toastStore.ts
frontend/src/types/: config.ts  index.ts
marketing/: .gitignore  COPY.md  Dockerfile  PROMPTS.md  README.md  next.config.ts  package-lock.json  package.json
marketing-research/: design-trends.md  product-analysis.md  prompt-guide.md
marketing/app/: globals.css  layout.tsx  page.tsx
marketing/app/changelog/: page.tsx
marketing/app/features/: page.tsx
marketing/app/how-it-works/: page.tsx
marketing/app/stack/: page.tsx
marketing/components/: bento.tsx  cta.tsx  eyebrow.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  hover-video.tsx  lenis-provider.tsx  marquee.tsx  nav.tsx  pipeline.tsx  scroll-progress.tsx  scroll-scene.tsx  security.tsx  stack.tsx  sub-page-shell.tsx  testimonial.tsx
marketing/components/backgrounds/: threads.tsx
marketing/components/ui/: animated-shiny-text.tsx  aurora-text.tsx  border-beam.tsx  button.tsx  edge-bleed.tsx  hyper-text.tsx  line-shadow-text.tsx  liquid-glass.tsx  magnetic.tsx  number-ticker.tsx  particles.tsx  progressive-blur.tsx  shine-border.tsx  spotlight-card.tsx  text-animate.tsx  text-effect.tsx  text-reveal.tsx
marketing/marketing-research/: glass-type-edges.md  polish-pass.md  reactbits-hover-reveal.md  subpages-copy.md  subpages-plan.md  subpages-prompts.md
marketing/scripts/: gen-images.mjs  gen-videos.mjs  prompts.mjs
migrations/: 001_initial.sql  002_add_file_hash.sql  003_kss.sql  004_scrape_prices.sql  005_nullable_job_drawing.sql  006_scrape_pipeline_v2.sql  007_price_lv_columns.sql  008_drm.sql  009_price_crud.sql  010_kss_reports.sql  011_ai_kss_dual_mode.sql  012_kss_audit_trail.sql  013_kss_suggestions.sql  014_erp_foundation.sql  015_kss_draft_status.sql  016_pricing_defaults_and_eur.sql  017_phase4_audit_dual_code.sql  018_quantity_norms.sql  019_quantity_scraper_runtime.sql  020_extraction_traceability.sql  021_explicit_totals_ladder.sql  022_drawing_structures.sql  023_user_price_corpus.sql  024_drawing_ai_summary.sql  025_currency_eur_only.sql  026_link_imports_to_drawings.sql
scripts/: extract_pdf.py
tests/fixtures/: offer_tasos.xlsx  tasos_three_modules.dxf
(+65 files in other folders)
