[workspace]
resolver = "2"
members = [
    "crates/kcc-core",
    "crates/kcc-dxf",
    "crates/kcc-report",
    "crates/kcc-api",
    "crates/kcc-worker",
    "crates/erp-core",
    "crates/erp-boq",
    "crates/erp-costs",
    "crates/erp-assemblies",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env
dotenvy = "0.15"
