[package]
name = "erp-boq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
erp-core = { path = "../erp-core" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
