[package]
name = "kcc-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "kcc-worker"
path = "src/main.rs"

[dependencies]
kcc-core = { path = "../kcc-core" }
kcc-dxf = { path = "../kcc-dxf" }
kcc-report = { path = "../kcc-report" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# Parallel computation
rayon = "1"

# HTTP (for direct Perplexity calls + PDF fetches)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# PDF text extraction for the quantity scraper
pdf-extract = "0.9"

# Env
dotenvy = { workspace = true }
